fixed modals not showing

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11618,8 +11618,4 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
     width: 100%;
 }
-/*year*/
-.ui-datepicker-calendar {
-    display: none;
-    }
 
